# manubot-ai-editor-code

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  environment.yml  pyproject.toml  setup.cfg  task_main.py
nbs/: 00_play_with_pygithub.ipynb
nbs/00-testing_github_api/: 00-biochatter.ipynb  00-ccc.ipynb  00-manubot-gpt.ipynb  00-mutator_epistasis.ipynb  00-phenoplier.ipynb
nbs/00-testing_github_api/py/: 00-biochatter.py  00-ccc.py  00-manubot-gpt.py  00-mutator_epistasis.py  00-phenoplier.py
nbs/01-paragraph_match/: 00-biochatter-gpt35-par_match.ipynb  00-biochatter-match.ipynb  01-biochatter-gpt35-par_match-reversed.ipynb  01-epistasis-gpt35-par_match.ipynb  05-ccc-gpt35-par_match.ipynb  06-phenoplier-gpt35-par_match.ipynb  tasks.py
nbs/01-paragraph_match/py/: 00-biochatter-gpt35-par_match.py  00-biochatter-match.py  01-biochatter-gpt35-par_match-reversed.py  01-epistasis-gpt35-par_match.py  05-ccc-gpt35-par_match.py  06-phenoplier-gpt35-par_match.py
nbs/05-llm_evaluation/: 00-llm_pairwise-template.ipynb  10-summarize.ipynb  15-save_scores.ipynb  tasks.py
nbs/05-llm_evaluation/output/: 00-llm_pairwise-biochatter-manuscript--gpt-3.5-turbo--mistral:7b-instruct-fp16.ipynb  00-llm_pairwise-biochatter-manuscript--gpt-3.5-turbo--mistral_7b-instruct-fp16.ipynb  (+21 more)
nbs/05-llm_evaluation/py/: 00-llm_pairwise-template.py  (+2 more)
nbs/manuscripts_selection/: 00-biochatter.ipynb  00-manubot-gpt.ipynb  00-mutator_epistasis.ipynb
nbs/py/: 00_play_with_pygithub.py
scripts/: run_nbs.sh  run_nbs_server.sh
src/proj/: papermill_custom_kernel.py  utils.py
(+13 files in other folders)
