[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "manubot-ai-editor-code"
version = "0.1.0"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[tool.black]
target-version = ['py38', 'py39', 'py310', 'py311']
line-length = 88

[tool.ruff]
target-version = "py38"
lint.ignore = [
    "E501",  # line-too-long (black should handle)
]
line-length = 88
lint.select = [
    "B",  # flake8-bugbear
    "C",  # flake8-comprehensions
    "C90",  # mccabe
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # isort
    "UP",  # pyupgrade
    "W",  # pycode warnings
]

[tool.ruff.lint.mccabe]
max-complexity = 19

[tool.ruff.lint.per-file-ignores]
"nbs/**/*.ipynb" = ["B018"]
"nbs/**/*.py" = ["B018"]

[tool.pytask.ini_options]
task_files = "tasks_*.py"
show_errors_immediately = true
